# PlotGenCpp

./: CMakeLists.txt  README.md
docs/: documentation.md  documentation_fr.md
include/: plotgen.h  simple_svg_1.0.0.hpp
src/: examples.cpp  plotgen.cpp
